# blend-mix-optimizer

./: LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_optimizer.py
assets/: BF02_Ores_Chemical_Composition.xlsx
config/: config.py  config.yaml
data/: ore_chemistry.py
engine/: blend_calculator.py  fuel_calculator.py  grid_search.py  optimizer.py  overflow_resolver.py
src/: app.py  main.py
src/data/: influx_loader.py  ore_chemistry.py
src/engine/: balanced_optimizer.py  blend_calculator.py  fuel_calculator.py  grid_search.py  optimizer.py
src/ui/: charts.py  manual_blend.py  results.py  sidebar.py
src/utils/: config.py
ui/: charts.py  manual_blend.py  results.py  sidebar.py  styles.py
